fix: Results dashboard on mobile screens

--- a/styles/barchart.css
+++ b/styles/barchart.css
@@ -2,14 +2,14 @@
   display: grid;
   grid-template-columns: repeat(5, 1fr);
   grid-template-rows: repeat(120, 1fr) 10fr;
-  grid-column-gap: 3em;
   height: 20em;
   width: 40vw;
   margin-left: auto;
   margin-right: auto;
   margin: 3em auto 0;
-  border: 1px solid black;
   padding: 1em;
+  background-color: #fff;
+  box-shadow: 0 2px 1px -1px #0003,0 1px 1px #00000024,0 1px 3px #0000001f;
 }
 
 .chart [class*="bar"] {
